RESOLVED FIXED35166
[V8] Worker crashes due to r54972
https://bugs.webkit.org/show_bug.cgi?id=35166
Summary [V8] Worker crashes due to r54972
Nate Chapin
Reported 2010-02-19 10:39:44 PST
I didn't properly test the worker-related changes in the final version of r54972, and I screwed up unwrapping global objects when we're in a WorkerContext. Patch momentarily.
Attachments
patch (1.25 KB, patch)
2010-02-19 10:51 PST, Nate Chapin
dglazkov: review+
Nate Chapin
Comment 1 2010-02-19 10:51:28 PST
Dimitri Glazkov (Google)
Comment 2 2010-02-19 10:53:14 PST
Comment on attachment 49092 [details] patch ok.
Nate Chapin
Comment 3 2010-02-19 11:26:29 PST
Alexey Proskuryakov
Comment 4 2010-02-19 11:33:33 PST
Is this covered by existing regression tests?
Nate Chapin
Comment 5 2010-02-19 11:42:07 PST
(In reply to comment #4) > Is this covered by existing regression tests? Yes, but unfortunately, most (all?) of the tests that cover v8-related worker code are run under a full build of chromium, so problems didn't show up in any buildbots until chromium tried to merge passed r54972. I thought I had run those tests locally prior to committing r54972, but apparently I hadn't. Mea culpa.
Note You need to log in before you can comment on or make changes to this bug.