2010-02-19  Nate Chapin  <japhet@chromium.org>

Reviewed by Dimitri Glazkov.

        [V8] Fix Worker crash regression in r54972

        https://bugs.webkit.org/show_bug.cgi?id=35166

        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::instantiateV8Object): Properly unwrap global objects when inside a WorkerContext.



Canonical link: https://commits.webkit.org/46328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55023 268f45cc-cd09-0410-ab3c-d52691b4dbfc